plugins {
	id 'org.springframework.boot' version '2.4.5'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.edu.austral.ingsis'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.2.5.RELEASE'
	compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.2.5.RELEASE'
	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.2.5.RELEASE'
	compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.2.5.RELEASE'
	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.20'
	compile group: 'org.webjars', name: 'jquery', version: '3.3.1-1'
//	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.2.5.RELEASE'
	compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.4.2'

	compile group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '2.2.6.RELEASE'
	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
	compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '2.2.5.RELEASE', ext: 'pom'
}

test {
	useJUnitPlatform()
}
